--- a/style.css
+++ b/style.css
@@ -8,16 +8,19 @@
     list-style: none;
     
 }
+body{
+    overflow-x: hidden;
+}
 .container{
-    width: 100%;
-    height: 120px;
+    width: 1300px;
+    height: 120vh;
 }
 .carrossel{
     display: flex;
 }
 .img-fundo{
-    width: 100%;
-    height: 500px;
+    width: 1300px;
+    height: 100%;
 }
 .header{
     background-color: rgba(0, 0, 0, 0.281);
@@ -41,7 +44,7 @@
 }
 .dropdown-toggle, .dropdown-toggle1, .dropdown-toggle2, .dropdown-toggle3{
     position: relative;
-    display: inline-block;
+    display: block;
     margin-bottom: 5px;
     font-weight: 300;
     font-family: 'Open Sans', sans-serif;
@@ -54,8 +57,9 @@
     -webkit-text-stroke: 0.1, black;
 }
 .dropdown-menu, .dropdown-menu1, .dropdown-menu2, .dropdown-menu3{
+    display: none;
     background-color: whitesmoke;
-    
+    margin-right: 10px;
 }
 .dropdown-menu a, .dropdown-menu1 a, .dropdown-menu2 a, .dropdown-menu3 a    {
     display: block;
@@ -69,4 +73,77 @@
     padding: 5px 12px;
     line-height: 24px;
     
+}
+/*---------------------------------------------------------------------------------------*/
+
+.meio{
+    background: #f2f2f2;
+    position: absolute;
+    top: 500px;
+    text-align: center;
+    left: 0;
+    right: 0;
+}
+
+
+.qual{
+    font-family: 'Open Sans', sans-serif;
+    padding-top: 3%;
+    padding-bottom: 2%;
+    color: #4e4e4e;
+    font-size: 36px;
+    font-weight: 400;
+}
+.aqui{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    color: #4e4e4e;
+    padding-bottom: 2%;
+}
+/*------------------------------------------------------------------------------------*/
+
+.meio1{
+    background: #fff;
+    position: absolute;
+    top: 1100px;
+    text-align: center;
+    left: 0;
+    right: 0;
+}
+.qual1{
+    font-family: 'Open Sans', sans-serif;
+    padding-top: 3%;
+    padding-bottom: 2%;
+    color: #4e4e4e;
+    font-size: 36px;
+    font-weight: 400;
+}
+.aqui1{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    color: #4e4e4e;
+    padding-bottom: 2%;
+}
+/*-----------------------------------------------------------------------------------*/
+.meio2{
+    background: rgba(54,153,244, 0.7);
+    position: absolute;
+    top: 1600px;
+    text-align: center;
+    left: 0;
+    right: 0;
+}
+.qual2{
+    font-family: 'Open Sans', sans-serif;
+    padding-top: 3%;
+    padding-bottom: 2%;
+    color: #fff;
+    font-size: 36px;
+    font-weight: 400;
+}
+.aqui2{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    color: #fff;
+    padding-bottom: 2%;
 }
