--- a/style.css
+++ b/style.css
@@ -1,31 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
 *{
+    list-style: none;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-    
 }
 body{
-    overflow-x: hidden;
-}
-.container{
-    width: 1300px;
-    height: 120vh;
-}
-.carrossel{
-    display: flex;
-}
-.img-fundo{
-    width: 1300px;
-    height: 100%;
+    text-decoration: none;
 }
 .header{
     background-color: rgba(0, 0, 0, 0.281);
     width: 100vw;
-    height: 20vh;
+    height: 10vh;
     display: flex;
     justify-content: right;
     position: absolute;
@@ -48,102 +35,66 @@ body{
     margin-bottom: 5px;
     font-weight: 300;
     font-family: 'Open Sans', sans-serif;
-    text-shadow: 1px 2px #111;
-    border-radius: 3px;
     color: #fff;
     font-size: 16px;
-    padding: 5px 12px;
-    line-height: 24px;
-    -webkit-text-stroke: 0.1, black;
+    text-decoration: none;
 }
 .dropdown-menu, .dropdown-menu1, .dropdown-menu2, .dropdown-menu3{
     display: none;
     background-color: whitesmoke;
+    text-align: left;
     margin-right: 10px;
 }
 .dropdown-menu a, .dropdown-menu1 a, .dropdown-menu2 a, .dropdown-menu3 a    {
     display: block;
-    margin-bottom: 20px;
-    text-shadow: 10px, 10px, 2px  black;
+    margin-bottom: 2rem;
     font-family: 'Open Sans', sans-serif;
     color: black;
     font-weight: normal;
     border-radius: 3px;
-    font-size: 16px;
-    padding: 5px 12px;
-    line-height: 24px;
-    
+    font-size: 1rem;
+    text-decoration: none;
 }
-/*---------------------------------------------------------------------------------------*/
-
-.meio{
-    background: #f2f2f2;
-    position: absolute;
-    top: 500px;
-    text-align: center;
-    left: 0;
-    right: 0;
+/*------------------------------SLIDER----------------------------*/
+#mainSlider .carousel-inner, #mainSlider .carousel-item{
+    height: 50vh;
 }
-
-
-.qual{
+#mainSlider .carousel-caption{
+    top: 45%;
+}
+#mainSlider .carousel-caption h2{
+    font-size: 3rem;
     font-family: 'Open Sans', sans-serif;
-    padding-top: 3%;
-    padding-bottom: 2%;
-    color: #4e4e4e;
-    font-size: 36px;
-    font-weight: 400;
+    margin-bottom: 1rem;
+    text-shadow: 10px, 10px, 2px  black;
+    -webkit-text-stroke: 0.1, black;
+    border-radius: 3px;
+    border: 5px;
 }
-.aqui{
+#mainSlider .carousel-caption p{
+    font-size: 1rem;
     font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    color: #4e4e4e;
-    padding-bottom: 2%;
+    margin-bottom: 2rem;
+    text-shadow: 10px, 10px, 2px  black;
+    -webkit-text-stroke: 0.1, black;
+    border-radius: 3px;
 }
-/*------------------------------------------------------------------------------------*/
-
-.meio1{
-    background: #fff;
-    position: absolute;
-    top: 1100px;
-    text-align: center;
-    left: 0;
-    right: 0;
+#main-btn{
+    background-color: #65DAF9;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 1rem 2rem;
+    border-radius: 2rem;
+    text-decoration: none;
+    border: 3px solid transparent;
+    transition: 0.5s;
 }
-.qual1{
-    font-family: 'Open Sans', sans-serif;
-    padding-top: 3%;
-    padding-bottom: 2%;
-    color: #4e4e4e;
-    font-size: 36px;
-    font-weight: 400;
+#main-btn:hover{
+    background-color: transparent;
+    border-color: #65DAF9;
+    color: black;
 }
-.aqui1{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    color: #4e4e4e;
-    padding-bottom: 2%;
-}
-/*-----------------------------------------------------------------------------------*/
-.meio2{
-    background: rgba(54,153,244, 0.7);
-    position: absolute;
-    top: 1600px;
-    text-align: center;
-    left: 0;
-    right: 0;
-}
-.qual2{
-    font-family: 'Open Sans', sans-serif;
-    padding-top: 3%;
-    padding-bottom: 2%;
-    color: #fff;
-    font-size: 36px;
-    font-weight: 400;
-}
-.aqui2{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    color: #fff;
-    padding-bottom: 2%;
+#mainSlider .carousel-indicators .active{
+    background-color: #65DAF9;
 }
