--- a/style.css
+++ b/style.css
@@ -9,56 +9,22 @@
 body{
     text-decoration: none;
 }
-.header{
-    background-color: rgba(0, 0, 0, 0.281);
-    width: 100vw;
-    height: 10vh;
-    display: flex;
-    justify-content: right;
-    position: absolute;
-    top: 0px;
+
+.navbar-brand{
+    margin-left: 1rem;
 }
-.c-dropdown{
-    display: flex;
-    width: 80%;
-    justify-content: right;
-    
+
+.navbar-nav .nav-item{
+    margin-right: 2rem;
 }
-.c-dropdown_item{
-    position: relative;
-    width: 100%;
-    top: 80%;
-}
-.dropdown-toggle, .dropdown-toggle1, .dropdown-toggle2, .dropdown-toggle3{
-    position: relative;
-    display: block;
-    margin-bottom: 5px;
-    font-weight: 300;
-    font-family: 'Open Sans', sans-serif;
-    color: #fff;
-    font-size: 16px;
-    text-decoration: none;
-}
-.dropdown-menu, .dropdown-menu1, .dropdown-menu2, .dropdown-menu3{
-    display: none;
-    background-color: whitesmoke;
-    text-align: left;
-    margin-right: 10px;
-}
-.dropdown-menu a, .dropdown-menu1 a, .dropdown-menu2 a, .dropdown-menu3 a    {
-    display: block;
-    margin-bottom: 2rem;
-    font-family: 'Open Sans', sans-serif;
-    color: black;
-    font-weight: normal;
-    border-radius: 3px;
-    font-size: 1rem;
-    text-decoration: none;
-}
+
 /*------------------------------SLIDER----------------------------*/
+
 #mainSlider .carousel-inner, #mainSlider .carousel-item{
     height: 50vh;
+    
 }
+
 #mainSlider .carousel-caption{
     top: 45%;
 }
