finalizando home-page

--- a/style.css
+++ b/style.css
@@ -64,3 +64,31 @@ body{
 #mainSlider .carousel-indicators .active{
     background-color: #65DAF9;
 }
+/*------------------------GRID------------------------------*/
+#services{
+    background-color: rgb(235, 231, 231);
+}
+#titulo{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2rem;
+    color: #4e4e4e;
+    margin-top: 3rem;
+    font-weight: 600;
+}
+.col-12 p{
+    font-size: 1rem;
+    color: #4e4e4e;
+    font-family: 'Open Sans', sans-serif;
+    margin-bottom: 3rem;
+}
+.col h4, p{
+    color: #4e4e4e;
+    font-size: 1rem;
+    font-family: 'Open Sans', sans-serif;
+}
+.col p{
+    margin-bottom: 3rem;
+}
+#vantagens{
+    background-color: rgba(54,153,244, 0.7);
+}
