--- a/frontend/src/components/slider.css
+++ b/frontend/src/components/slider.css
@@ -1,12 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
 
-Carousel{
-    height: 400px;
-}
+
 
  .carousel-caption{
-    margin: 60px;
+    margin: 60px 0;
 }
 .carousel-caption h2{
     font-size: 3rem;
@@ -42,4 +40,49 @@ Carousel{
 }
 #mainSlider .carousel-indicators .active{
     background-color: #65DAF9;
+}
+/*---------------Responsividade-------------------*/
+
+
+@media (max-width:620px) {
+    
+    .carousel-caption h2{
+        font-size: 1.8rem;
+    }
+    .carousel-caption p{
+        font-size: 1rem;
+    }
+    #main-btn{
+        padding:0.8rem;
+        font-size: 0.8rem;
+    }
+}
+@media (max-width:385px){
+    .carousel-caption{
+        width: 210px;
+        margin-left: -10px;
+    }
+    .carousel-caption h2{
+        font-size: 1.8rem;
+    }
+    .carousel-caption p{
+        font-size: 1rem;
+    }
+    #main-btn{
+        padding:0.6rem;
+        font-size: 1rem;
+    }
+    
+}
+@media (max-width:280px){
+    .carousel-caption{
+        width: 210px;
+        margin-left: -18px;
+    }
+}
+@media (max-width:240px){
+    .carousel-caption{
+        width: 210px;
+        margin-left: -29px;
+    }
 }
